<resources>
    <string name="app_name">プロットエディタ</string>

    <!-- 一覧画面用 -->
    <string name="updated_at">更新日時：</string>

    <!-- メニュー用 -->
    <string name="menu_save">保存</string>
    <string name="menu_insert">追加</string>
    <string name="menu_edit">編集</string>
    <string name="menu_delete">削除</string>
    <string name="menu_image">画像選択</string>
    <string name="menu_reload">更新</string>
    <string name="menu_memo_list">メモ一覧へ</string>

    <!-- NavigationViewのメニュー用 -->
    <string name="menu_back">⇐ プロット一覧に戻る</string>
    <string name="menu_outline">概要</string>
    <string name="menu_character">登場人物</string>
    <string name="menu_world">世界観</string>
    <string name="menu_idea">構想（ストーリー）</string>
    <string name="menu_memo">メモ</string>

    <!-- NavigationView用 -->
    <string name="drawable_open">開く</string>
    <string name="drawable_close">閉じる</string>
    <string name="menu_plot_delete">プロットを削除</string>

    <!-- ダイアログ用 -->
    <string name="dialog_plot_insert">プロット新規作成</string>
    <string name="dialog_title_hint">作品タイトルを入力</string>
    <string name="dialog_create">作成</string>
    <string name="dialog_cancel">キャンセル</string>
    <string name="dialog_idea_hint">大まかな話の流れ</string>
    <string name="dialog_save">保存</string>
    <string name="dialog_confirm">確認！</string>
    <string name="dialog_confirm_text">変更された項目があります。\n保存せずにこのまま移動しますか？</string>
    <string name="dialog_yes">はい</string>
    <string name="dialog_no">いいえ</string>
    <string name="dialog_delete_text">「%1$s」のプロットを削除します。\nよろしいですか？</string>
    <string name="dialog_delete">削除</string>
    <string name="dialog_character_delete_msg">登場人物「%1$s」を削除します。\nよろしいですか？</string>
    <string name="dialog_parlance_delete_msg">「%1$s」の情報を削除します。\nよろしいですか？</string>
    <string name="dialog_memo_delete_msg">現在開いているメモを削除します。\nよろしいですか？</string>
    <string name="dialog_story_delete_msg">「%1$s」を削除します。\nよろしいですか？</string>
    <string name="dialog_story_edit">編集</string>
    <string name="dialog_story_insert">ストーリー追加</string>
    <string name="dialog_insert">追加</string>
    <string name="dialog_hint_story_title">タイトル</string>
    <string name="dialog_hint_story">ストーリー</string>
    <string name="toast_chancel_msg">変更された項目があります。保存せずに終了する場合はもう一度「キャンセル」をタップしてください。</string>

    <!-- 概要画面用 -->
    <string name="tv_title">作品タイトル</string>
    <string name="tv_slogan">キャッチコピー</string>
    <string name="tv_summary">あらすじ</string>
    <string name="tv_advertising">宣伝文章（Twitter用）</string>
    <string name="tv_slogan_text">一言で読者の心をグッと掴みましょう</string>
    <string name="tv_summary_text">物語を簡略化してみましょう</string>

    <!-- 構想画面用 -->
    <string name="idea_1">起</string>
    <string name="idea_2">承</string>
    <string name="idea_3">転</string>
    <string name="idea_4">結</string>

    <!-- 登場人物一覧画面用 -->
    <string name="character_icon">キャラクターイメージ</string>

    <!-- 登場人物画面用 -->
    <string name="tv_outline">概要</string>
    <string name="tv_character_about">・・この人物について・・</string>
    <string name="tv_character_image_icon">イメージ画像</string>
    <string name="tv_file_select">ファイルを選択</string>
    <string name="tv_file_path">何も選択されていません</string>
    <string name="tv_character_info">人物情報</string>
    <string name="tv_character_name">名前</string>
    <string name="tv_phonetic">フリガナ</string>
    <string name="tv_another_name">別名</string>
    <string name="tv_age">年齢</string>
    <string name="tv_sai">歳</string>
    <string name="tv_unknown">不明</string>
    <string name="tv_gender">性別</string>
    <string name="tv_man">男</string>
    <string name="tv_woman">女</string>
    <string name="tv_both_sexes">両性</string>
    <string name="tv_asexual">無性</string>
    <string name="tv_birthday">誕生日</string>
    <string name="tv_month">月</string>
    <string name="tv_day">日</string>
    <string name="tv_height_weight">身長・体重</string>
    <string name="tv_centimeter">cm</string>
    <string name="tv_kilogram">kg</string>
    <string name="tv_first_person">一人称</string>
    <string name="tv_second_person">二人称</string>
    <string name="tv_belongs">所属</string>
    <string name="tv_skill">能力</string>
    <string name="tv_profile">人物紹介</string>
    <string name="tv_prelusion_text">紹介文</string>
    <string name="tv_lived_process">生い立ち</string>
    <string name="tv_personality">性格</string>
    <string name="tv_appearance">容姿</string>
    <string name="tv_other">その他</string>

    <!-- 登場人物追加・編集画面用 -->
    <string name="hint_another">あだ名、二つ名など</string>
    <string name="hint_skill">保有している特殊な能力、あるいは特技など</string>
    <string name="hint_profile">簡潔な紹介文（一覧画面にて表示されます）</string>
    <string name="hint_lived">どんな暮らしを送ってきたか、登場するまでの経緯など</string>
    <string name="hint_personality">どんな人物か、他の人物と絡む際の態度など</string>
    <string name="hint_appearance">髪形、髪や瞳の色、服装など</string>
    <string name="hint_other">上記以外に補足したい点があれば</string>

    <!-- 世界観一覧画面用 -->
    <string name="tv_stage">舞台</string>
    <string name="tv_parlance">設定・用語</string>
    <string name="tv_stage_text">まだ何も記述されていません</string>

    <!-- 設定・用語画面用 -->
    <string name="tv_parlance_name">名称</string>
    <string name="tv_explanation">説明</string>

    <!-- 舞台編集画面用 -->
    <string name="hint_stage">物語の舞台となる場所について\n例）かつて大地の女神が暮らしていたとされる〇〇村。この村では……</string>

    <!-- 設定・用語編集画面用 -->
    <string name="hint_parlance_name">設定項目・用語を入力</string>
    <string name="hint_explanation">説明文を入力</string>

    <!-- メモ編集画面用 -->
    <string name="memo_background">メモ背景</string>

    <!-- アウトプット用 -->
    <string name="msg_err_send">サーバ通信に失敗しました。もう一度送信をお願いします。</string>
    <string name="msg_err_timeout">サーバ通信がタイムアウトしました。もう一度送信をお願いします。</string>
    <string name="msg_err_parse">サーバからの返信内容の解析に失敗しました。もう一度送信をお願いします。</string>


    <string name="test">
        学校に到着\n
        始業式が始まるまで去年の教室で待機\n
        教室の一番奥隅にある机に荷物を置いて、席に着く。\n
        と、同時に\n
\n
        「おはよー怜奈」\n
\n
        理子が近寄ってくる。\n
        ※ここで理子の説明。彼女は川北理子。一年のときに～……\n
\n
        「おはよう、理子。早いね」\n
        「ふっふー、まぁね。今日は待ちに待ったクラス替えだし」\n
\n
        と、楽しげな理子。そっかぁ、と怜奈も合わせて笑う。\n
\n
        「でも、怜奈はあんまりこういうのに興味なさげだよね」\n
        「そうかな」\n
        「そうだよ。今だってほら、あたしとの温度差が凄いよ」\n
        「そこまでじゃないと思うけどなぁ」\n
\n
        怜奈　苦笑\n
\n
        「でも、理子と同じクラスだったらいいなぁとは思ってるよ」\n
        「そりゃそうでしょ！　思ってくれてなかったらあたしショックで泣いちゃうって！」\n
        「もー理子は大袈裟だなぁ」\n
\n
        話しながら周囲にも意識を向ける。\n
        理子だけでない、他のみんなもどこか浮かれているようだ。\n
\n
        （やっぱり、理解できないな）\n
\n
        変化することの何がそんなに楽しいのだろうか。\n
        変化は、ただの恐怖でしかないのに。\n
\n
        「先生来たぞー」\n
\n
        クラスメイトの男子が声を上げる。\n
        理子が「相変わらず時間ピッタリだねぇ」と呆れながら自分の席に戻っていった。\n
\n
        開けっ放しの扉から担任が入ってくる。\n
        同時にチャイムが鳴った。確かに時間ピッタリだ。\n
\n
        （担任の先生も変わっちゃうんだよね）\n
\n
        やっと慣れてきたところだったのに。\n
        ごくまれに変わらないこともあるが、そんな低確率なものに期待はできない。\n
\n
        大体、一年という期間があまりに短すぎるのだ。\n
        たったそれだけの期間で他人との距離を縮めるだなんて無理がある。\n
        一番長い時間一緒にいる理子ですら一年の後半になってようやく慣れてきたというのに。\n
\n
        理子と同じクラスであってほしいというのは本当のことだ。\n
        理由はもちろん、その方が楽だから。それ以上でも以下でもない。\n
        誰とでも仲良くなれる理子とは違う。\n
\n
        （早く終わらないかな）\n
\n
        吐き出してしまいそうな憂鬱をなんとか飲み込んで。\n
        怜奈は窓の外に目を向けた。\n
        桜はもう、一つ残らず散ってしまっていた。\n
        （もしくは朔夜に出会える、という点から一つだけ咲いている描写）\n
        　※一つ残らず散っていては負の要素しかないことになってしまう。\n
    </string>
</resources>
